@@ -1,6 +1,6 @@
 Package: Gmisc
-Version: 0.6.2.3
-Date: 2014-05-15
+Version: 0.6.3
+Date: 2014-05-17
 Title: A few handy misc functions for plots, tables, and more
 Author: Max Gordon <max@gforge.se>
 Maintainer: Max Gordon <max@gforge.se>
