@@ -1,6 +1,7 @@
 # Generated by roxygen2 (4.0.0): do not edit by hand
 
 S3method(heightDetails,xaxis)
+S3method(print,htmlTable)
 export(bezierArrowGradient)
 export(bezierArrowSmpl)
 export(copyAllNewAttributes)
