@@ -45,11 +45,12 @@ rownames(vars) <- c("Mean (SD)", "Median (IQR)", "Mean (SD)")
 htmlTable(
   vars,
   caption  = "Continuous & binary variables", 
-  n.rgroup=c(2,1), rgroup=c("Gas", "Weight"),
-  n.cgroup=c(2,1), 
-  cgroup=c(splitLines4Table("Results", sprintf("n=%d", NROW(mtcars)), html=TRUE),
-           ""),
-  colheads = c(sprintf("%s (SD)", levels(mtcars$am)), "units"),
+  n.rgroup = c(2,1), rgroup=c("Gas", "Weight"),
+  n.cgroup = c(2,1), 
+  cgroup   = c(splitLines4Table("Results", 
+                                sprintf("n=%d", NROW(mtcars)), html=TRUE),
+               ""),
+  headings =c(sprintf("%s (SD)", levels(mtcars$am)), "Units"),
   rowlabel = "Variable",
   ctable   = TRUE)
 
@@ -57,14 +58,15 @@ htmlTable(
 htmlTable(
   vars,
   caption  = "Continuous & binary variables", 
-  n.rgroup=c(2,1), rgroup=c("Gas", "Weight"),
-  n.cgroup=c(2,1), 
-  cgroup=c(splitLines4Table("Results", sprintf("n=%d", NROW(mtcars)), html=TRUE),
-           ""),
-  colheads = c(sprintf("%s (SD)", levels(mtcars$am)), "units"),
+  n.rgroup = c(2,1), rgroup=c("Gas", "Weight"),
+  n.cgroup = c(2,1), 
+  cgroup   = c(splitLines4Table("Results", 
+                                sprintf("n=%d", NROW(mtcars)), html=TRUE),
+               ""),
+  headings =c(sprintf("%s (SD)", levels(mtcars$am)), "Units"),
   rowlabel = "Variable",
   ctable   = TRUE,
-  altcol = c('#f2f2f2','ivory'))
+  altcol   = c('#f2f2f2','ivory'))
 
 
 ## another example
@@ -73,7 +75,7 @@ describeMedian_minmax <- function(...) describeMedian(..., iqr = FALSE)
 ## t1 wrapper function 1
 getT1stat <- function(varname, digits = 0) {
   getDescriptionStatsBy(data[ , varname],
-                        data$groupvar,
+                        data$treat,
                         add_total_col = TRUE, 
                         show_all_values = TRUE,
                         hrzl_prop = FALSE,
@@ -83,12 +85,15 @@ getT1stat <- function(varname, digits = 0) {
                         continuous_fn = describeMedian_minmax)
 }
 
+set.seed(1)
 f <- function(...) sample(..., 100, replace = TRUE)
 data <- data.frame(age = rpois(100, 50),
                    cat_var = f(LETTERS[1:5]),
                    sex = f(c('Male','Female')),
                    race = f(c('Black','White','Asian')),
-                   groupvar = f(c('1','2')))
+                   treat = factor(f(1:3),
+                                  # The factor helps arranging the order
+                                  labels=c('Treatment A', 'Treatment B', 'Placebo')))
 
 ## table 1 stats
 table_data <- list()
@@ -103,15 +108,17 @@ rgroup <- names(table_data)
 n.rgroup <- unname(sapply(rgroup, function(x) nrow(table_data[[x]])))
 
 # add a column spanner for the status columns
-cgroup <- c("", "Group variable<sup>&dagger;</sup>")
-n.cgroup <- c(1, 2) 
+cgroup <- c("", "Type of treatment<sup>&dagger;</sup>")
+n.cgroup <- c(1, 3) 
 colnames(output_data) <- 
   c(paste0('Total<br><font weight = normal; size = 1>n = ',
            nrow(data), '</font>'),
-    paste0('groupvar=1<br><font weight = normal; size = 1>n = ',
-           sum(data$groupvar == '1'),'</font>'),
-    paste0('groupvar=2<br><font weight = normal; size = 1>n = ',
-           sum(data$groupvar == '2'),'</font>'))
+    paste0('Treated A<br><font weight = normal; size = 1>n = ',
+           sum(data$treat == 'Treatment A'),'</font>'),
+    paste0('Treatment B&Dagger;<br><font weight = normal; size = 1>n = ',
+           sum(data$treat == 'Treatment B'),'</font>'),
+    paste0('Placebo<br><font weight = normal; size = 1>n = ',
+           sum(data$treat == 'Placebo'),'</font>'))
 
 
 htmlTable(output_data, align = 'rccc',
@@ -125,5 +132,5 @@ htmlTable(output_data, align = 'rccc',
           altcol = c('white','lightblue1'),
           tfoot = paste0(
             '<font size=1>Abbreviations: ECOG, Eastern Cooperative Oncology Group; PS, performance score</font><br>',
-            "<font size=1><sup>&dagger;</sup>Note 1.</font><br>",
-            "<font size = 1><sup>&Dagger;</sup>Note 2.</font>"))
+            "<font size=1><sup>&dagger;</sup>Note 1. Trial groups for a new wonder drug</font><br>",
+            "<font size = 1><sup>&Dagger;</sup>Note 2. Twice the dosage of treatment A</font>"))
